--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@types/node": "^12.20.37",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "@types/react-helmet": "^6.1.4",
     "@types/react-router-dom": "^5.3.2",
     "dayjs": "^1.10.7",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.5.2",
