--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,7 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Reddit Analytics",
+  "name": "Reddit Analytics",
+  "description": "Find the best time to post on your subreddit",
   "icons": [
     {
       "src": "favicon.ico",
