--- a/package.json
+++ b/package.json
@@ -1,7 +1,29 @@
 {
-  "name": "reddit",
-  "version": "0.1.0",
+  "name": "reddit-analytics",
+  "version": "1.0.0",
+  "description": "Find the best time to post on your subreddit",
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rorazliev/reddit-analytics.git"
+  },
+  "keywords": [
+    "fetch-api",
+    "jest",
+    "typescript",
+    "react",
+    "react-router",
+    "react-testing-library",
+    "reddit",
+    "reddit-api",
+    "scss-modules"
+  ],
+  "author": "Ruslan Orazliev (https://linkedin.com/in/rorazliev)",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/rorazliev/reddit-analytics/issues"
+  },
+  "homepage": "https://rorazliev.github.io/reddit-analytics",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
@@ -23,16 +45,13 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "eject": "react-scripts eject",
+    "lint": "eslint ./src/**",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build",
+    "start": "react-scripts start",
+    "test": "react-scripts test"
   },
   "browserslist": {
     "production": [
@@ -55,6 +74,7 @@
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.27.1",
-    "eslint-plugin-react-hooks": "^4.3.0"
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "gh-pages": "^3.2.3"
   }
 }
