--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reddit-analytics",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Find the best time to post on your subreddit",
   "private": true,
   "repository": {
@@ -8,41 +8,52 @@
     "url": "git+https://github.com/rorazliev/reddit-analytics.git"
   },
   "keywords": [
-    "fetch-api",
-    "jest",
+    "axios",
     "typescript",
     "react",
+    "react-redux",
     "react-router",
-    "react-testing-library",
     "reddit",
     "reddit-api",
-    "scss-modules"
+    "redux",
+    "redux-thunk",
+    "styled-components"
   ],
-  "author": "Ruslan Orazliev (https://linkedin.com/in/rorazliev)",
+  "author": {
+    "name": "Ruslan Orazliev",
+    "url": "https://linkedin.com/in/rorazliev"
+  },
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/rorazliev/reddit-analytics/issues"
   },
   "homepage": "https://rorazliev.github.io/reddit-analytics",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^12.20.37",
-    "@types/react": "^17.0.37",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^16.11.22",
+    "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
-    "@types/react-helmet": "^6.1.4",
-    "@types/react-router-dom": "^5.3.2",
+    "@types/react-helmet": "^6.1.5",
+    "@types/react-redux": "^7.1.22",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.22",
+    "axios": "^0.25.0",
     "dayjs": "^1.10.7",
-    "node-sass": "^6.0.1",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "typescript": "^4.5.2",
-    "web-vitals": "^1.1.2"
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
+    "styled-components": "^5.3.3",
+    "typescript": "^4.5.5",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "build": "react-scripts build",
@@ -66,15 +77,14 @@
     ]
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb": "^19.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
+    "eslint": "^8.8.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-import-resolver-typescript": "^2.5.0",
-    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.27.1",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "gh-pages": "^3.2.3"
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0"
   }
 }
